# docs/swagger.json
@@ -794,7 +794,7 @@
                 }
             }
         },
-        "/admin/booking/accept-booking": {
+        "/admin/booking/approve/{id}": {
             "post": {
                 "description": "Updates the booking review status to SCHEDULED, triggering a notification to assigned employees",
                 "consumes": [
@@ -809,13 +809,11 @@
                 "summary": "Accept a booking",
                 "parameters": [
                     {
-                        "description": "Accept booking data",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.AcceptBookingRequest"
-                        }
+                        "type": "string",
+                        "description": "Booking ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -2601,17 +2599,6 @@
         }
     },
     "definitions": {
-        "types.AcceptBookingRequest": {
-            "type": "object",
-            "required": [
-                "bookingId"
-            ],
-            "properties": {
-                "bookingId": {
-                    "type": "string"
-                }
-            }
-        },
         "types.AcceptBookingResponse": {
             "type": "object",
             "properties": {
